<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/tlo"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginStart="108dp"
        android:fontFamily="@font/carrois_gothic"
        android:textColor="#008EFF"
        android:layout_marginTop="56dp"
        android:text="@string/omlet"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="89dp"
        android:layout_height="53dp"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/omelet_648197_1920" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/carrois_gothic"
        android:textColor="#008EFF"
        android:text="I śniadanie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="94dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/musli" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="302dp"
        android:layout_height="53dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/carrois_gothic"
        android:textColor="#008EFF"
        android:text="@string/musli"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="96dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/owsianka" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="309dp"
        android:layout_height="54dp"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/carrois_gothic"
        android:textColor="#008EFF"
        android:text="@string/owsianka"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="II śniadanie"
        android:fontFamily="@font/carrois_gothic"
        android:textColor="#008EFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="91dp"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/malin" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="312dp"
        android:layout_height="40dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/carrois_gothic"
        android:textColor="#008EFF"
        android:text="@string/owsianka_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/carrois_gothic"
        android:textColor="#008EFF"
        android:text="I danie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="102dp"
        android:layout_height="66dp"
        android:layout_marginEnd="310dp"
        android:fontFamily="@font/carrois_gothic"
        android:textColor="#008EFF"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:srcCompat="@drawable/curry__3_" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="306dp"
        android:layout_height="61dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/carrois_gothic"
        android:textColor="#008EFF"
        android:text="@string/curry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/carrois_gothic"
        android:textColor="#008EFF"
        android:text="II danie"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="100dp"
        android:layout_height="64dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="308dp"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/zupa_krem_z_kukurydzy" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="312dp"
        android:layout_height="55dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/carrois_gothic"
        android:textColor="#008EFF"
        android:text="@string/krem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="Podwieczorek"
        android:fontFamily="@font/carrois_gothic"
        android:textColor="#008EFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="103dp"
        android:layout_height="68dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:srcCompat="@drawable/marchew" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="306dp"
        android:layout_height="67dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/carrois_gothic"
        android:textColor="#008EFF"
        android:text="@string/chipsy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/carrois_gothic"
        android:textColor="#008EFF"
        android:text="Kolacja"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="107dp"
        android:layout_height="89dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:srcCompat="@drawable/botw" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="302dp"
        android:layout_height="84dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/carrois_gothic"
        android:textColor="#008EFF"
        android:text="@string/botwinka"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

</androidx.constraintlayout.widget.ConstraintLayout>